Try to fix spacing of corner icon.

--- a/_harp/css/_page-chart2.scss
+++ b/_harp/css/_page-chart2.scss
@@ -3,7 +3,7 @@
   .actWrap {
     position: relative;
     width: 850px;
-    height: 520px;
+    height: 560px;
     
     p{
       text-align:left;
@@ -14,7 +14,7 @@
     position: absolute;
     display: block;
     width: 850px;
-    height: 450px;
+    height: 415px;
     
     .label {
       font-size: 2.0em;
