--- a/_harp/css/_page-first.scss
+++ b/_harp/css/_page-first.scss
@@ -1,6 +1,7 @@
 #first {
   #mapImage{
     margin: 20px 0 0px 0;
+    height: 230px;
   }
   .instruction{
     margin: 0;
